aux_source_directory(. DIR_SOLUTIONS_SRC)

add_subdirectory(DP)
include_directories(DP)
add_subdirectory(TwoPointers)
include_directories(TwoPointers)
add_subdirectory(Array)
include_directories(Array)
add_subdirectory(UnionFind)
include_directories(UnionFind)
add_subdirectory(Search_BFS_DFS_Backtrace)
include_directories(Search_BFS_DFS_Backtrace)

add_library(Solutions STATIC ${DIR_SOLUTIONS_SRC})
target_link_libraries(Solutions DP TwoPointers Array UnionFind Search_BFS_DFS_Backtrace)